--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="card-img-overlay d-flex flex-column justify-content-center align-items-center">
           <div>
             <h1 class="card-title fw-bold text-center">We Provide Effective <br> Legal Solutions</h1>
-          <p class="card-text text-center mb-4 mt-4">There are many variations of <br> passages of Lorem Ipsum available, <br> but the majority have suffered alteration <br> in some form, by injected humour.</p>
+          <p class="card-text text-center mb-4 mt-4 d-none d-sm-none d-md-block">There are many variations of <br> passages of Lorem Ipsum available, <br> but the majority have suffered alteration <br> in some form, by injected humour.</p>
           </div>
           <div>
             <form class="d-flex justify-content-center" role="search">
